--- a/contacts.html
+++ b/contacts.html
@@ -90,11 +90,10 @@
                 <div class="row row-30 justify-content-between">
                     <div class="col-md-6 col-xl-5">
                         <h1>Connect with us today</h1>
-                        <div class="big">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                        <div class="big">Address : 405, 4th Floor, Anum Estate, Near Baloch Colony Bridge,
+                            Main Shahrah-e-Faisal, Karachi</div>
                         <ul class="list text-xl fw-regular">
-                            <li>T: <a class="link-inherit" href="tel:#">(868) 630-9327</a>
-                            </li>
-                            <li>E: <a href="mailto:#">mail@demolink.org</a>
+                            <li>Email: <a href="mailto:fmws2020@gmail.com ">fmws2020@gmail.com</a>
                             </li>
                         </ul>
                     </div>
