--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class=" col-md-6 ">
                         <div class="pe-xl-5 ">
                             <h1 style="font-weight:bold " class="wow fadeInLeft">Give a helping <br>hand to those who need it!</h1>
-                            <div class="big wow fadeInLeft ">Many of families in Pakistan go hungry every year.</div>
+                            <div class="big wow fadeInLeft "></div>
                             <button class="btn btn-lg btn-primary wow fadeInLeft" data-bs-toggle="modal" data-bs-target="#modal">Donate Now</button>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
          <!-- Our Sponsors-->
         <section class="section section-lg bg-default">
             <div class="container">
-                <h4 style="font-weight:bold">Our Donors And Members:</h4>
+                <h4 style="font-weight:bold">Our Members:</h4>
               <div class="owl-carousel owl-carousel-center owl-carousel-1" data-items="1" data-sm-items="2" data-md-items="3" data-lg-items="4" data-xl-items="5" data-autoplay="true" data-owl="{&quot;dots&quot;:true,&quot;slideTransition&quot;:&quot;linear&quot;,&quot;autoplayTimeout&quot;:4000,&quot;autoplaySpeed&quot;:4000,&quot;autoplayHoverPause&quot;:true}">  <a class="image-link text-color-hover" href="akhtar-shehzad.html ">
                 <p loading="lazy">Akhtar Hussain Shehzad
                 </p>
