--- a/loan.html
+++ b/loan.html
@@ -109,9 +109,8 @@
                         </div>
                         <div class="col-md-6 col-xl-5">
                             <div class="ps-xl-5">
-                                <h2>At FOM, we manage local charitable projects</h2>
-                                <div class="big">Vivamus rhoncus odio ut ultrices efficitur. Suspendisse potenti. Donec
-                                    congue aliquam elit, non fringilla enim.Duis aute irure dolor.</div>
+                                <h2>At FOM, We provide <span style = "color: #f77d5c;">RIBA FREE</span> loan to support small business</h2>
+                                <div class="big"></div>
                             </div>
                         </div>
                     </div>
@@ -126,9 +125,8 @@
                         </div>
                         <div class="col-md-6 col-xl-5">
                             <div class="ps-xl-5">
-                                <h2>At FOM, we manage local charitable projects</h2>
-                                <div class="big">Vivamus rhoncus odio ut ultrices efficitur. Suspendisse potenti. Donec
-                                    congue aliquam elit, non fringilla enim.Duis aute irure dolor.</div>
+                                <h2>At FOM, We provide <span style = "color: #f77d5c;">RIBA FREE</span> loan to support small business</h2>
+                                <div class="big"></div>
                             </div>
                         </div>
                     </div>
@@ -143,9 +141,8 @@
                         </div>
                         <div class="col-md-6 col-xl-5">
                             <div class="ps-xl-5">
-                                <h2>At FOM, we manage local charitable projects</h2>
-                                <div class="big">Vivamus rhoncus odio ut ultrices efficitur. Suspendisse potenti. Donec
-                                    congue aliquam elit, non fringilla enim.Duis aute irure dolor.</div>
+                                <h2>At FOM, We provide <span style = "color: #f77d5c;">RIBA FREE</span> loan to support small business</h2>
+                                <div class="big"></div>
                             </div>
                         </div>
                     </div>
