--- a/abdul-jumani.html
+++ b/abdul-jumani.html
@@ -94,8 +94,7 @@
                             <h1>Abdul Qadir Jumani</h1> <br>
                             <h2>(Treasurer)</h2>
                             <div class="big">Commerce graduate and running his own trading business, deals in general item supplies, Most of the people like to serve privilege communities in order to retain their welfare capabilities. Mr. Abdul Qadir is one of them he
-                                also possesses more than 20 years’ of experience working in Social Welfare organizations. Currently Lives in Flat # B-1, Kareem Manzil, Plot No. SA / 2, Sirajuddaula Road, Cutchi Memon Society, Bahadurabad, Karachi Professional
-                                Address: QAM TRADERS, Suite No 306, 3rd Floor Anum Estate, Main Shahrah-e Faisal, Karachi.
+                                also possesses more than 20 years’ of experience working in Social Welfare organizations.
 
 
                             </div>
