--- a/abdul-shakoor.html
+++ b/abdul-shakoor.html
@@ -94,7 +94,7 @@
                             <h1>Aqil Abdul Shakoor </h1> <br>
                             <h2>(Joint Secretary)</h2>
                             <div class="big">Has done Masters in Business Administration. Currently working in NADRA as Senior Manager also has vast experience of working in social organizations in interior Sindh. Fulfilling his duties as a Joint Secretary. Earlier he
-                                has been serving in different charitable organizations in key posts as well. Lives in Plot S A-15, Flat No 6, Cutchi Memon Society, Bahadurabad, Karachi.
+                                has been serving in different charitable organizations in key posts as well.
 
                             </div>
                         </div>
