--- a/akhtar-shehzad.html
+++ b/akhtar-shehzad.html
@@ -96,8 +96,7 @@
                             <div class="big">Having a Master’s degree in Chemistry. The Managing Partner and Chief Financial Officer of a renowned Indenting Company <span style="font-weight: bold; color:#f77d5c;"><a href="https://www.dawnimpex.com/">DAWN IMPEX</a></span>,
                                 has been managing the company since last 15 years. Also have vast experience of working in different positions in community based social organization. He has been rendering his services in the same welfare society for last
                                 20 years. Remained active in variety of services, be it Relief Camps, Donation campaign or any other activity in the city or any remote areas. His active participation in Volunteer services, lead him to the start his own
-                                Welfare Organization which is at its good pace of fulfilling the utter needs of poor community. Residential detail is Plot No. D- 19 / 3, Dawood Co-operative Housing Society, Sharfabad near TV station, Karachi. Professional
-                                Address: Suite No 405, 4th Floor Anum Estate, Main Shahrah-e Faisal, Karachi.
+                                Welfare Organization which is at its good pace of fulfilling the utter needs of poor community.
 
                             </div>
                         </div>
