--- a/fida-hussain.html
+++ b/fida-hussain.html
@@ -93,7 +93,7 @@
                             <img class = "pfp" src="images/fida.jpg">
                             <h1>Fida Hussain</h1>
                             <div class="big">Self-made person works as a driver of a Public vehicle for his living He keeps vast experience of working in many social organizations, specifically in interior Sindh where he has been working for more than 30 Years. An active
-                                member who likes to serve humanity even being a person who is on daily wages. He is currently living in Flat No. A-2, 1st Floor Halo Plaza, 1st Floor, Street No 7, Baghdadi Liyari Karachi.
+                                member who likes to serve humanity even being a person who is on daily wages.
                             </div>
                         </div>
                     </div>
