--- a/makki-haroon.html
+++ b/makki-haroon.html
@@ -94,10 +94,7 @@
                             <h1>Makki Haroon</h1> <br>
                             <h2>(Vice President)</h2>
                             <div class="big">A Commerce graduate has been running a family owned Decoration and Catering Business for the last ten years. He possesses great experience of working for Welfare Organization. The person has been actively participating in various
-                                volunteer works where he proved to be a smart and active member. Due to his undeniable efforts, he now is serving as a Vice President of this Welfare society with great enthusiasm. Currently reside in LUBNA ARCADE Plot
-                                C-84, Flat No. 103, Cutchi Memon Society, Bahadurabad, Karachi. Professional Address: Makki Caterers and Decorators Shop No 3, SA/9 Cutchi Memon Society, Bahadurabad, Karachi.
-
-
+                                volunteer works where he proved to be a smart and active member. Due to his undeniable efforts, he now is serving as a Vice President of this Welfare society with great enthusiasm.
                             </div>
                         </div>
                     </div>
