--- a/mudassar-yousuf.html
+++ b/mudassar-yousuf.html
@@ -93,10 +93,7 @@
                             <img class = "pfp" src="images/mudassir.jpg">
                             <h1>Mudassar Yousuf Jaffrani</h1>
                             <div class="big">Self-made person working in a shop as an In-charge and has good relations in community. Some personalities are more into serving others no matter how much they keep for themselves. Muddassir Yousuf is a befitted for this statement
-                                who set a great example of serving needy communities being a self-made earner. Reside in Flat No. 6, Hameeda Manzil SA / 3, Sirajuddaula Road, Cutchi Memon Society, Bahadurabad, Karachi Professional Address: SAK Timber,
-                                Siddiq Wahab Road, Old Haji Camp, Timber Market, Karachi
-
-
+                                who set a great example of serving needy communities being a self-made earner. 
                             </div>
                         </div>
                     </div>
