--- a/nadeem-sattar.html
+++ b/nadeem-sattar.html
@@ -94,10 +94,7 @@
                             <h1>Nadeem Sattar</h1> <br>
                             <h2>(General Secretary)</h2>
                             <div class="big">Has done Graduation in Commerce with working experience of more than 20 years as Accounts Manager in several Private Firms. Some of the people are quite known due to their praise worthy efforts in the field where they are never
-                                paid in money. Mr. Nadeem is one of the living model of such personalities who has been serving as General Secretary for last 18 years. Residential Address is House No. A-404, Adam Terrace Bahaduryar Jung Society, Bahadurabad,
-                                Karachi Professional Address: Suite No 405, 4th Floor Anum Estate, Main Shahrah-e Faisal, Karachi.
-
-
+                                paid in money. Mr. Nadeem is one of the living model of such personalities who has been serving as General Secretary for last 18 years.
                             </div>
                         </div>
                     </div>
