--- a/saleem.html
+++ b/saleem.html
@@ -93,7 +93,7 @@
                             <h1>Muhammad Saleem</h1> <br>
                             <h2>(Member)</h2>
                             <div class="big">After working for more than 40 years in a Private Firm as a Financial Assistant now enjoying retired life and spending time in serving humanity. He never hesitates to render himself for any unplanned cause that comes up in
-                                our Welfare Organization Lives in Plot S A-15, Flat No 2, Cutchi Memon Society, Bahadurabad, Karachi.
+                                our Welfare Organization.
 
 
                             </div>
