--- a/shahid-memon.html
+++ b/shahid-memon.html
@@ -92,10 +92,7 @@
                         <div class="col-md-10 col-lg-9 col-xl-8">
                             <img class = "pfp" src="images/shahid.jpg">
                             <h1>Shahid Memon</h1>
-                            <div class="big">A Commerce graduate and running his own trading business deals in general item and gift items. The person is serving for more than 20 years in social welfare organizations. At the moment is the active member of this organization
-                                He is currently living in House No. 5-A Naveen Mansion Gari Khata. Karachi. Professional Address: Suite No 405, 4th Floor Anum Estate, Main Shahrah-e Faisal, Karachi.
-
-
+                            <div class="big">A Commerce graduate and running his own trading business deals in general item and gift items. The person is serving for more than 20 years in social welfare organizations. At the moment is the active member of this organization.
                             </div>
                         </div>
                     </div>
