--- a/shakir-jumani.html
+++ b/shakir-jumani.html
@@ -94,10 +94,7 @@
                             <h1>Muhammad Shakir Jumani </h1> <br>
                             <h2>(Member)</h2>
                             <div class="big">A Commerce graduate having his own shop deals in iron and steel sheets also an active member of community based social organization. Muhammad Shakir actively participates in relief camping, charity campaigns and all other activities
-                                ever since he joined this organization. His Residential address is Flat # 4, Qasim Lodge, SA / 4 Cutchi Memon Society, Bahadurabad, Karachi Professional Address: Kohinoor Iron, Near Spencer Eye Hospital, Old Haji Camp,
-                                Karachi.
-
-
+                                ever since he joined this organization.
                             </div>
                         </div>
                     </div>
