--- a/siddiq-jumani.html
+++ b/siddiq-jumani.html
@@ -93,10 +93,7 @@
                             <img class = "pfp" src="images/siddiq.jpg">
                             <h1>Muhammad Siddiq Jumani </h1> <br>
                             <h2>(Member)</h2>
-                            <div class="big">Commerce graduate and working as an Estate Agent for more than 15 years He’s also very keen to serve humanity and actively participate in social welfare activities. His current living address is Flat No G-1, Plot No. C-84 Lubna
-                                Arcade, Cutchi Memon Society, Bahadurabad, Karachi
-
-
+                            <div class="big">Commerce graduate and working as an Estate Agent for more than 15 years He’s also very keen to serve humanity and actively participate in social welfare activities.
                             </div>
                         </div>
                     </div>
