--- a/index.html
+++ b/index.html
@@ -327,6 +327,8 @@
                     </div>
                 </div>
                 <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Frends Of Memon</span><span>.&nbsp;</span><a class="link-secondary" href="#">Privacy Policy</a></p>
+                <p style = "text-align: center;margin: 30px 0;">Developed by <span>Sajid Lakhani </span><br/><a class="rights" href="mailto:sajidlakhani59@gmail.com">sajidlakhani59@gmail.com</a>
+                <br/><a href="tel:03360839746">+92 3360839746</a></p>
             </div>
         </footer>
     </div>
